--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,10 +60,22 @@
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  h1{
+    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
+  }
+
+
+  h2{
+    @apply text-[16px] xl:text-[16px] leading-[1.1] font-semibold;
+  }
+
+
+  h3{
+    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
   }
 }
